--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
     font-size: 20px;
     background-color: black;
-    color: antiquewhite;
+    color: rgb(209, 73, 50);
 }
 .p {
     padding: 5px;
@@ -21,9 +21,9 @@
 }
 
 
-.result {
+.results {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-top: 25px;
 }
